--- a/views/partial/header.ejs
+++ b/views/partial/header.ejs
@@ -1,13 +1,22 @@
 <!doctype html>
 <html lang="pl">
-
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Strona wrona</title>
+  <title>Typer 2024 Kostrzyn nad Odrą</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
   </head>
-
 <body>
+
+  <nav class="navbar navbar-expand navbar-light bg-light">
+    <ul class="nav navbar-nav">
+      <li class="nav-item"><span class="nav-link">Witaj <a href="/"><%= locals.username %></a></li>
+        <li class="nav-item"><a class="nav-link" href="/ranking"><strong>Ranking</strong></a></li>
+        <li class="nav-item"><a class="nav-link" href="/users"><strong>Typy innych</strong></a></li>
+        <li class="nav-item"><a class="nav-link" href="/czat"><strong>Czat</strong></a></li>
+      <li class="nav-item"><a class="nav-link" href="/regulamin"><strong>Regulamin</strong></a></li>
+      <li class="nav-item"><a class="nav-link" href="/logout">Wyloguj</a></li>
+    </ul>
+  </nav>
