--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,5 +1,5 @@
-<%- include('./partial/header.ejs') %>
-
+<%- include('partial/header') %>
+<h2 style="text-align: center;">Euro 2024 Typerka - Kostrzyn nad Odrą</h2>
   <div class="container mt-5">
     <% if (typeof error !=='undefined' && error) { %>
       <div class="row">
@@ -42,5 +42,3 @@
           </div>
         </div>
   </div>
-
-  <%- include ('./partial/footer.ejs') %>
