--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,42 +1,40 @@
-<%- include('./partial/header.ejs') %>
-
-  <div class="container mt-5">
-    <% if (typeof error !=='undefined' && error) { %>
-      <div class="row">
-        <div class="col text-center">
-          <div class="alert alert-danger" role="alert">
-            <strong>Błąd formularza</strong> Błędne dane logowania!
-          </div>
+<%- include('partial/header') %>
+<h2 style="text-align: center;">Euro 2024 Typerka - Kostrzyn nad Odrą</h2>
+<div class="container mt-5">
+  <% if (typeof error !=='undefined' && error) { %>
+    <div class="row">
+      <div class="col text-center">
+        <div class="alert alert-danger" role="alert">
+          <strong>Błąd formularza</strong> Błędne dane logowania!
         </div>
       </div>
-      <% } %>
-        <div class="row">
-          <div class="col text-center fs-5">
-            <p><a href="/register">Rejestracja nowego użytkownika</a></p>
-          </div>
+    </div>
+    <% } %>
+      <div class="row">
+        <div class="col text-center fs-5">
+          <p><a href="/register">Rejestracja nowego użytkownika</a></p>
         </div>
-        <div class="row justify-content-center">
-          <div class="col-md-6">
-            <div class="card">
-              <div class="card-header">
-                <h3 class="text-center">Logowanie</h3>
-              </div>
-              <div class="card-body">
-                <form action="/login" method="POST">
-                  <div class="mb-3">
-                    <label for="username" class="form-label">Nazwa użytkownika</label>
-                    <input type="text" class="form-control" id="username" name="username" required>
-                  </div>
-                  <div class="mb-3">
-                    <label for="password" class="form-label">Hasło</label>
-                    <input type="password" class="form-control" id="password" name="password" required>
-                  </div>
-                  <button type="submit" class="btn btn-primary w-100">Zaloguj się</button>
-                </form>
-              </div>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-md-6">
+          <div class="card">
+            <div class="card-header">
+              <h3 class="text-center">Logowanie</h3>
+            </div>
+            <div class="card-body">
+              <form action="/login" method="POST">
+                <div class="mb-3">
+                  <label for="username" class="form-label">Nazwa użytkownika</label>
+                  <input type="text" class="form-control" id="username" name="username" required>
+                </div>
+                <div class="mb-3">
+                  <label for="password" class="form-label">Hasło</label>
+                  <input type="password" class="form-control" id="password" name="password" required>
+                </div>
+                <button type="submit" class="btn btn-primary w-100">Zaloguj się</button>
+              </form>
             </div>
           </div>
         </div>
-  </div>
-
-  <%- include ('./partial/footer.ejs') %>
+      </div>
+</div>
