--- a/views/typy-uzytkownikow.ejs
+++ b/views/typy-uzytkownikow.ejs
@@ -1,13 +1,14 @@
 <%- include('partial/header.ejs') %>
+<%- include('partial/nav.ejs') %>
 
 <div class="container">
   <div class="row">
     <div class="col-12">
-      <p style="font-size: 1.5rem;">Liczba aktywnych użytkowników: <%= users.filter((user) => {return user.aktywny === 1}).length %> / Liczba użytkowników: <%= users.length %></p>
+      <p style="font-size: 1.5rem;">Liczba aktywnych użytkowników: <%= users.filter((user) => {return user.aktywny === 1}).length %> <br>Liczba użytkowników: <%= users.length %></p>
       <div style="margin: 20px 0px"><label for="wyszukiwarka" style="margin-right: 10px;">Wyszukaj:</label><input type="text" name="" id="wyszukiwarka"></div>
       <ul id="listauzytkownikow">
         <% users.forEach(function(user) { %>
-          <li class="<%= (user.aktywny === 1) ? 'aktywny' : '' %>"><%=user.username%> <span><a href="/users/<%=user.id%>">typy</a></span></li>  
+          <li class="<%= (user.aktywny === 1) ? 'aktywny' : '' %>"><%=user.username%> <span><a href="/typy/<%=user.id%>">typy</a></span></li>  
           <% }); %>
         </ul>
     </div>
