--- a/views/typy-uzytkownika-gotowe.ejs
+++ b/views/typy-uzytkownika-gotowe.ejs
@@ -3,7 +3,7 @@
 
 <div class="container-fluid mt-5">
     <div style="font-size: 2rem;" class="row">
-        <div>Użytkownik: <%= nazwa.username %></div>
+        <div>Użytkownik: <%=nazwa?.username%></div>
         <div>Punkty: 0 pkt</div>
     </div>
 <% if(czyWytypowal == 1) { %>
