--- a/views/register.ejs
+++ b/views/register.ejs
@@ -33,7 +33,7 @@
                   </div>
                   <div class="mb-3">
                     <label for="phone" class="form-label">Numer telefonu</label>
-                    <input type="tel" class="form-control" id="phone" name="phone" required>
+                    <input type="tel" class="form-control" id="phone" name="phone" required pattern="[0-9]{9}">
                   </div>
                   <button type="submit" class="btn btn-primary w-100">Zarejestruj się</button>
                 </form>
